--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -24,8 +24,8 @@ img {
   height: auto;
 }
 
-.masthead-wrapper {
-  background-image: url('../img/banner1.jpg');
+.header {
+  background-image: url('../img/banner3.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -41,6 +41,11 @@ img {
   min-height: 700px;
   display: flex;
   flex-direction: column;
+}
+
+nav {
+  margin: 0;
+  padding: 0;
 }
 
 .masthead {
@@ -93,8 +98,8 @@ img {
 
 .home-title {
   width: 500px;
-  margin: auto;
-  margin-bottom: 35px;
+  margin: 0 auto;
+  padding-bottom: 35px;
   color: #ffffff;
   font-size: 50px;
   text-transform: uppercase;
@@ -107,7 +112,8 @@ img {
   font-size: 24px;
   font-weight: 300;
   line-height: 1.3;
-  margin-bottom: 35px;
+  margin: 0;
+  padding-bottom: 35px;
 }
 
 .home-btn {
@@ -119,6 +125,7 @@ img {
   color: #ffffff;
   text-decoration: none;
   background-color: #ff4e50;
+  border: 2px solid transparent;
 }
 
 .home-btn:hover {
@@ -142,13 +149,15 @@ img {
 .partners-header-title {
   color: #333333;
   font-size: 22px;
-  margin-bottom: 30px;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
 
 /* PARTNERS LIST */
 
 .partners-list {
-  margin-bottom: 30px;
+  margin: 0;
+  padding: 0;
   list-style: none;
   text-align:center;
 }
@@ -157,16 +166,24 @@ img {
   display: inline;
 }
 
+.partners-list-item {
+  width: 220px;
+  margin-bottom: 20px;
+}
+
 .partners-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 220px;
   margin: auto;
 }
 
 .partners-card-photo {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
 }
 
 .partners-card-photo::before {
@@ -175,8 +192,8 @@ img {
   right: 0px;
   display: inline-block;
   content: '';
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   border: 4px solid #ffffff;
   background-repeat: no-repeat;
@@ -228,7 +245,11 @@ img {
   border: 2px solid #ff4e50;
   border-radius: 20px;
   color: #ff4e50;
+  background-color: transparent;
   text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .partners-btn:hover {
@@ -268,10 +289,10 @@ img {
     margin-bottom: 15px;
   }
 
-  .partners-list-item {
+  /*.partners-list-item {
     width: 220px;
     margin-bottom: 20px;
-  }
+  }*/
 
   .partners-list-item:last-child {
     margin-bottom: 0;
