--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -17,63 +17,16 @@ body {
   margin: 0;
 }
 
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-.header {
-  background-image: url('../img/banner3.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 .container {
-  min-width: 320px;
-  max-width: 940px;
-  height: 320px;
+  width: 320px;
+  padding: 0 15px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.banner {
-  min-height: 700px;
-  display: flex;
-  flex-direction: column;
-}
-
-nav {
-  margin: 0;
-  padding: 0;
-}
-
-.masthead {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 100px;
-}
-
-.logo {
-  display: inline-block;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.logo:hover {
-  color: #ff4e50;
-}
-
-.nav {
-  display: flex;
-  margin: 0;
-  padding: 0;
 }
 
 .nav-item {
@@ -94,38 +47,53 @@ nav {
   border-color: #ffffff;
 }
 
+.logo {
+  display: block;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.logo:hover {
+  color: #ff4e50;
+}
+
 /* HOME */
 
 .home {
   text-align: center;
   margin: auto;
+  margin-top: 35px;
 }
 
 .home-title {
-  width: 500px;
-  margin: 0;
-  margin-bottom: 35px;
+  width: 291px;
   color: #ffffff;
-  font-size: 50px;
+  font-size: 30px;
   text-transform: uppercase;
-  line-height: 1.3;
+  /*line-height: 1.3;*/
   padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .home-slogan {
+  display: block;
+  width: 216px;
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 300;
-  line-height: 1.3;
-  margin: 0;
-  margin-bottom: 35px;
+  margin: 0 auto;
   padding: 0;
+  margin-bottom: 20px;
 }
 
 .home-btn {
   display: inline-block;
-  width: 220px;
+  width: 280px;
   line-height: 40px;
   text-align: center;
   border-radius: 20px;
@@ -133,6 +101,7 @@ nav {
   text-decoration: none;
   background-color: #ff4e50;
   border: 2px solid transparent;
+  margin-bottom: 140px;
 }
 
 .home-btn:hover {
@@ -143,21 +112,22 @@ nav {
 
 /* PARTNERS SECTION*/
 
-.partners-wrapper {
-  background-color: #ffffff;
+.partners {
   padding: 60px 0px;
+  margin: 0;
 }
 
 .partners-header {
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
 }
 
 .partners-header-title {
+  width: 270px;
   color: #333333;
   font-size: 22px;
   margin: 0 auto;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 /* PARTNERS LIST */
@@ -169,22 +139,17 @@ nav {
   text-align: center;
 }
 
-.partners-list li {
-  display: inline;
-}
-
 .partners-list-item {
   width: 220px;
-  margin: 0;
-  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-/*.partners-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-}*/
+.partners-list-item:last-child {
+  margin-bottom: 0;
+}
 
 .partners-card-photo {
   position: relative;
@@ -192,6 +157,7 @@ nav {
   flex-direction: column;
   align-items: center;
   margin: auto;
+  margin-bottom: 20px;
 }
 
 .partners-card-photo::before {
@@ -202,7 +168,7 @@ nav {
   content: '';
   width: 36px;
   height: 36px;
-  /*border-radius: 50%;*/
+  border-radius: 50%;
   border: 4px solid #ffffff;
   background-repeat: no-repeat;
   background-position: center;
@@ -233,25 +199,25 @@ nav {
   color: #333333;
   text-align: center;
   margin: 0;
-  padding-top: 20px;
+  padding: 0;
   padding-bottom: 15px;
 }
 
 .partners-card-text {
   color: #666666;
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
   font-weight: 300;
   text-align: center;
   line-height: 1.3;
   margin: 0;
+  padding: 0;
 }
 
 .partners-btn {
   display: block;
   margin: auto;
   margin-top: 40px;
-  width: 200px;
+  width: 275px;
   line-height: 40px;
   text-align: center;
   border: 2px solid #ff4e50;
@@ -259,86 +225,10 @@ nav {
   color: #ff4e50;
   background-color: transparent;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
   font-weight: 700;
 }
 
 .partners-btn:hover {
   color: #ffffff;
   background-color: #ff4e50;
-}
-
-/* MEDIA*/
-
-@media (max-width: 767px) {
-  /*.masthead-wrapper {
-    background-image: url('../img/banner1.jpg');
-  }*/
-
-  .masthead {
-    flex-direction: column-reverse;
-    min-height: 230px;
-    padding-top: 25px;
-  }
-
-  .home-title {
-    width: 291px;
-    font-size: 30px;
-  }
-
-  .home-slogan {
-    font-size: 18px;
-  }
-
-  .home-btn {
-    width: 280px;
-  }
-
-  .partners-header-title {
-    width: 270px;
-    margin: auto;
-    margin-bottom: 15px;
-  }
-
-  /*.partners-list-item {
-    width: 220px;
-    margin-bottom: 20px;
-  }*/
-
-  .partners-list-item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 957px) {
-  .masthead-wrapper {
-    background-image: url('../img/banner2.jpg');
-  }
-
-  .partners-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .partners-list-item {
-    flex: 0 0 35%;
-  }
-  
-  .partners-list-item:nth-last-child(-n +2) {
-    margin-bottom: 0;
-  }
-}
-
-@media (min-width: 958px) {
-  .masthead-wrapper {
-    background-image: url('../img/banner3.jpg');
-  }
-
-  .partners-list {
-    display: flex;
-    justify-content: space-between;
-  }  
-  
 }
