--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -58,7 +58,14 @@
 
   .site-nav {
     margin: 0;
+    padding: 0;
   }
+
+  .home {
+    text-align: center;
+    margin: 0 auto;
+  }
+
 
   .home-title {
     margin: 0 auto;
